melhorando as cores e a tipografia

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>       
         </section>
 
-        <section id="sobre">
+        <section id="sobre" class="main-container">
             <div id="div-sobre">
                 <div id="div-left">
                     <img src="assets/imagens/img-sobre.jpg" alt="Imagem sobre">
@@ -63,7 +63,7 @@
             </div>
         </section>
 
-        <section id="cardapio">
+        <section id="cardapio" class="main-container">
             <div id="div-cardapio">
                 <h2>Cardápio</h2>
                 <div class="menu-cardapio">
@@ -142,7 +142,7 @@
             </div>
         </section>
 
-        <section id="faq">
+        <section id="faq" class="main-container">
             <div id="div-faq">
                 <h2>Perguntas Frequentes</h2>
                 <dl id="list-faq" data-faq-lista="lista">
@@ -158,7 +158,7 @@
             </div>
         </section>
 
-        <section id="contato">
+        <section id="contato" class="main-container">
             <div id="div-contato">
                 <h2>Entre em Contato</h2>
 
